@@ -51,4 +51,9 @@ Prado::initErrorHandlers();
  */
 require_once(dirname(__FILE__).'/TApplication.php');
 
+/**
+ * Includes TShellApplication class file
+ */
+require_once(dirname(__FILE__).'/TShellApplication.php');
+
 ?>
